<resources>
    <string name="app_name">Ведьмак: Лист персонажа</string>
    <string name="open_nav">Открыть навигационную панель</string>
    <string name="close_nav">Закрыть навигационную панель</string>
    <string name="charisma">Харизма</string>
    <string name="deception">Обман</string>
    <string name="performance">Выступление</string>
    <string name="insight">Понимание людей</string>
    <string name="persuasion">Убеждение</string>
    <string name="city_knowledge">Знание улиц</string>
    <string name="arts">Искусство</string>
    <string name="etiquette">Этикет</string>
    <string name="strength">Сила</string>
    <string name="toughness">Стойкость</string>
    <string name="dodge">Изворотливость</string>
    <string name="perception">Внимание</string>
    <string name="survival">Выживание</string>
    <string name="deduction">Дедукция</string>
    <string name="monster_knowledge">Монстрология</string>
    <string name="education">Образование</string>
    <string name="tutoring">Обучение</string>
    <string name="tactics">Тактика</string>
    <string name="trade">Торговля</string>
    <string name="language_common">Всеобщий</string>
    <string name="language_elder_speech">Старшая речь</string>
    <string name="language_dwarven">Краснолюдский</string>
    <string name="melee_combat">Ближний бой</string>
    <string name="athletics">Атлетика</string>
    <string name="brawling">Борьба</string>
    <string name="riding">Верховая езда</string>
    <string name="polearms">Древковое</string>
    <string name="light_blades">Легкие клинки</string>
    <string name="blades">Клинки</string>
    <string name="seafaring">Мореходство</string>
    <string name="sleight_of_hand">Ловкость рук</string>
    <string name="stealth">Скрытность</string>
    <string name="crossbows">Арбалеты</string>
    <string name="bows">Луки</string>
    <string name="gambling">Азартные игры</string>
    <string name="looks">Внешний вид</string>
    <string name="leadership">Лидерство</string>
    <string name="seduction">Соблазнение</string>
    <string name="alchemy">Алхимия</string>
    <string name="lockpicking">Взлом замков</string>
    <string name="trap_knowledge">Знание ловушек</string>
    <string name="crafting">Изготовление</string>
    <string name="disguise">Маскировка</string>
    <string name="first_aid">Первая помощь</string>
    <string name="forgery">Подделывание</string>
    <string name="intimidation">Запугивание</string>
    <string name="hex_craft">Наведение порчи</string>
    <string name="ritual_craft">Проведение ритуалов</string>
    <string name="magic_resistance">Сопротивление магии</string>
    <string name="resist_coercion">Сопротивление убеждению</string>
    <string name="spellcraft">Сотворение заклинаний</string>
    <string name="bravery">Храбрость</string>
    <string name="any_language">Язык (выберите 1)</string>
    <string name="intelligence">Интеллект</string>
    <string name="reaction">Реакция</string>
    <string name="agility">Ловкость</string>
    <string name="constitution">Телосложение</string>
    <string name="speed">Скорость</string>
    <string name="empathy">Эмпатия</string>
    <string name="craft">Ремесло</string>
    <string name="will">Воля</string>
    <string name="luck">Удача</string>
    <string name="intelligence_short">ИНТ</string>
    <string name="reaction_short">РЕА</string>
    <string name="agility_short">ЛОВ</string>
    <string name="constitution_short">ТЕЛ</string>
    <string name="speed_short">СКОР</string>
    <string name="empathy_short">ЭМП</string>
    <string name="craft_short">РЕМ</string>
    <string name="will_short">ВОЛЯ</string>
    <string name="luck_short">УДЧ</string>
    <string name="energy">Энергия</string>
    <string name="stun">Устойчивость</string>
    <string name="run">Бег</string>
    <string name="jump">Прыжок</string>
    <string name="health">ПЗ</string>
    <string name="stamina">Выносливость</string>
    <string name="carry_weight">Вес</string>
    <string name="rest">Отдых</string>
    <string name="melee_bonus">Ближний бой</string>
    <string name="energy_short">ЭН</string>
    <string name="stun_short">УСТ</string>
    <string name="run_short">БЕГ</string>
    <string name="jump_short">ПРЖ</string>
    <string name="health_short">ПЗ</string>
    <string name="stamina_short">ВЫН</string>
    <string name="carry_weight_short">ВЕС</string>
    <string name="rest_short">ОТД</string>
    <string name="melee_bonus_short">БЛЖ</string>
    <string-array name="stats_short">
        <item>@string/intelligence_short</item>
        <item>@string/reaction_short</item>
        <item>@string/agility_short</item>
        <item>@string/constitution_short</item>
        <item>@string/speed_short</item>
        <item>@string/empathy_short</item>
        <item>@string/craft_short</item>
        <item>@string/will_short</item>
        <item>@string/luck_short</item>
    </string-array>
    <string-array name="additional_stats">
        <item>@string/energy</item>
        <item>@string/stun</item>
        <item>@string/run</item>
        <item>@string/jump</item>
        <item>@string/health</item>
        <item>@string/stamina</item>
        <item>@string/carry_weight</item>
        <item>@string/rest</item>
        <item>@string/melee_bonus</item>
    </string-array>
    <string-array name="additional_stats_short">
        <item>@string/energy_short</item>
        <item>@string/stun_short</item>
        <item>@string/run_short</item>
        <item>@string/jump_short</item>
        <item>@string/health_short</item>
        <item>@string/stamina_short</item>
        <item>@string/carry_weight_short</item>
        <item>@string/rest_short</item>
        <item>@string/melee_bonus_short</item>
    </string-array>
    <string name="bard">Бард</string>
    <string name="bard_description"> Сударыня, я — поэт. И я здесь, чтобы восхвалять вашу неземную красоту, если вы окажете мне честь и явите себя полностью.
        Лютик</string>
    <string-array name="bard_abilities">
        <item>@string/charisma</item>
        <item>@string/deception</item>
        <item>@string/performance</item>
        <item>@string/any_language</item>
        <item>@string/insight</item>
        <item>@string/persuasion</item>
        <item>@string/city_knowledge</item>
        <item>@string/arts</item>
        <item>@string/seduction</item>
        <item>@string/etiquette</item>
    </string-array>
    <string-array name="witcher_abilities">
        <item>@string/perception</item>
        <item>@string/deduction</item>
        <item>@string/spellcraft</item>
        <item>@string/alchemy</item>
        <item>@string/dodge</item>
        <item>@string/survival</item>
        <item>@string/blades</item>
        <item>@string/athletics</item>
        <item>@string/stealth</item>
        <item>@string/riding</item>
    </string-array>
    <string-array name="fighter_abilities">
        <item>@string/melee_combat</item>
        <item>@string/crossbows</item>
        <item>@string/polearms</item>
        <item>@string/bows</item>
        <item>@string/blades</item>
        <item>@string/survival</item>
        <item>@string/bravery</item>
        <item>@string/strength</item>
        <item>@string/intimidation</item>
        <item>@string/dodge</item>
    </string-array>
    <string-array name="priest_abilities">
        <item>@string/ritual_craft</item>
        <item>@string/leadership</item>
        <item>@string/bravery</item>
        <item>@string/insight</item>
        <item>@string/hex_craft</item>
        <item>@string/first_aid</item>
        <item>@string/charisma</item>
        <item>@string/survival</item>
        <item>@string/tutoring</item>
        <item>@string/spellcraft</item>
    </string-array>
    <string-array name="mage_abilities">
        <item>@string/insight</item>
        <item>@string/spellcraft</item>
        <item>@string/hex_craft</item>
        <item>@string/magic_resistance</item>
        <item>@string/polearms</item>
        <item>@string/education</item>
        <item>@string/ritual_craft</item>
        <item>@string/etiquette</item>
        <item>@string/seduction</item>
        <item>@string/looks</item>
    </string-array>
    <string-array name="medic_abilities">
        <item>@string/resist_coercion</item>
        <item>@string/charisma</item>
        <item>@string/etiquette</item>
        <item>@string/bravery</item>
        <item>@string/insight</item>
        <item>@string/survival</item>
        <item>@string/trade</item>
        <item>@string/deduction</item>
        <item>@string/light_blades</item>
        <item>@string/alchemy</item>
    </string-array>
    <string-array name="criminal_abilities">
        <item>@string/sleight_of_hand</item>
        <item>@string/lockpicking</item>
        <item>@string/city_knowledge</item>
        <item>@string/forgery</item>
        <item>@string/deception</item>
        <item>@string/stealth</item>
        <item>@string/intimidation</item>
        <item>@string/light_blades</item>
        <item>@string/athletics</item>
        <item>@string/perception</item>
    </string-array>
    <string-array name="craftsman_abilities">
        <item>@string/crafting</item>
        <item>@string/trade</item>
        <item>@string/athletics</item>
        <item>@string/toughness</item>
        <item>@string/strength</item>
        <item>@string/city_knowledge</item>
        <item>@string/arts</item>
        <item>@string/alchemy</item>
        <item>@string/education</item>
        <item>@string/persuasion</item>
    </string-array>
    <string-array name="merchant_abilities">
        <item>@string/charisma</item>
        <item>@string/light_blades</item>
        <item>@string/any_language</item>
        <item>@string/education</item>
        <item>@string/city_knowledge</item>
        <item>@string/trade</item>
        <item>@string/persuasion</item>
        <item>@string/insight</item>
        <item>@string/gambling</item>
        <item>@string/resist_coercion</item>
    </string-array>
    <string name="craftsman">Ремесленник</string>
    <string name="craftsman_description"> Брось ты этот хлам! Я выкую тебе меч, способный ранить бога.
        Эйвар Хаттори</string>
    <string name="criminal">Преступник</string>
    <string name="criminal_description"> Шрам на лице будущей императрицы — моё наивысшее достижение.
        Стефан Скеллен</string>
    <string name="fighter">Воин</string>
    <string name="fighter_description"> Солдаты мыслят тактически. Они знают, когда нужно нанести удар, когда отступить, когда идти в атаку и когда держать строй.
        Вернон Роше</string>
    <string name="mage">Маг</string>
    <string name="mage_description"> Магия — это Хаос, Искусство и Наука. Она — проклятие, благословение и прогресс.
        Йеннифэр из Венгерберга</string>
    <string name="medic">Медик</string>
    <string name="medic_description">Я еду в Вызиму, чтобы помочь бороться с Бичом Катрионы в лечебнице Лебеды.
        Шани</string>
    <string name="merchant">Торговец</string>
    <string name="merchant_description"> Нашёл покупателя на мою коллекцию — в ней всего трёх карт не хватает.
        Золтан Хивай</string>
    <string name="priest">Жрец</string>
    <string name="priest_description">Нас больше заботит не количество форели в реках, а природное равновесие.
        Мышовур</string>
    <string name="witcher">Ведьмак</string>
    <string name="witcher_description"> Этому миру не нужен герой. Ему нужен профессионал.
        Геральт из Ривии</string>
    <string name="human">Человек</string>
    <string name="dwarf">Краснолюд</string>
    <string name="elf">Эльф</string>
    <string name="equipment">Снаряжение</string>
    <string name="backstory">Предыстория</string>
    <string name="skill_tree">Ветка навыков</string>
    <string name="main_list">Главная</string>
    <string name="magic">Магия</string>
</resources>