<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentAbilities">

     <RelativeLayout
         android:id="@+id/improvement_points_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
        android:padding="10sp"
        android:weightSum="1">
        <TextView
            android:id="@+id/improvement_points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textSize="24sp"
            android:text="Очки улучшения:" />
        <EditText
            android:id="@+id/improvement_points"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/improvement_points_text"
            android:layout_marginStart="5sp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:visibility="visible"
            android:inputType="number|numberDecimal"
            android:textColor="@color/black"
            android:text="44"
            android:textSize="24sp"
            android:maxLength="3"/>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/abilities_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/improvement_points_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/intelligence_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginVertical="10sp"
                android:paddingStart="10sp"
                android:background="@color/toolbar"
                android:textColor="@color/white"
                android:text="@string/intelligence"/>
            <ListView
                android:id="@+id/intelligence_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"/>
            <TextView
                android:id="@+id/reaction_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginVertical="10sp"
                android:paddingStart="10sp"
                android:background="@color/toolbar"
                android:textColor="@color/white"
                android:text="@string/reaction"/>
            <ListView
                android:id="@+id/reaction_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"/>
            <TextView
                android:id="@+id/agility_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginVertical="10sp"
                android:paddingStart="10sp"
                android:background="@color/toolbar"
                android:textColor="@color/white"
                android:text="@string/agility"/>
            <ListView
                android:id="@+id/agility_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"/>
            <TextView
                android:id="@+id/constitution_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginVertical="10sp"
                android:paddingStart="10sp"
                android:background="@color/toolbar"
                android:textColor="@color/white"
                android:text="@string/constitution"/>
            <ListView
                android:id="@+id/constitution_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"/>
            <TextView
                android:id="@+id/empathy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginVertical="10sp"
                android:paddingStart="10sp"
                android:background="@color/toolbar"
                android:textColor="@color/white"
                android:text="@string/empathy"/>
            <ListView
                android:id="@+id/empathy_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"/>
            <TextView
                android:id="@+id/craft_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginVertical="10sp"
                android:paddingStart="10sp"
                android:background="@color/toolbar"
                android:textColor="@color/white"
                android:text="@string/craft"/>
            <ListView
                android:id="@+id/craft_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"/>
            <TextView
                android:id="@+id/will_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginVertical="10sp"
                android:paddingStart="10sp"
                android:background="@color/toolbar"
                android:textColor="@color/white"
                android:text="@string/will"/>
            <ListView
                android:id="@+id/will_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/to_equipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="50sp"
        android:layout_margin="10sp"
        android:text="Далее"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>